<resources>
    <string name="app_name">Difa App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tagline_app">Tetep terhubung dengan difable</string>
    <string name="version_name">Version 1</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_passowrdi">Kata Sandi</string>
    <string name="text_email">Alamat Email</string>
    <string name="text_lupa_pass">Lupa Password?</string>
    <string name="text_dont_have_account">Tidak Punya Akun?</string>
    <string name="text_daftar">Daftar</string>
    <style name="text_kebijakan">Kebijakan Aplikasi</style>
    <string name="text_atau">Atau</string>
    <string name="text_masuk_dengan_google">Masuk Dengan Google</string>

    <string name="text_email_invalid">Email Anda Tidak Sesuai</string>
    <string name="text_error_custome_edittext">Kata Sandi Minimal 8 karater</string>
    <string name="text_nama_lengkap">Nama Lengkap</string>

    <!--Onboarding-->
    <string name="text_lewati">Lewati</string>
    <string name="text_lanjut">Lanjut</string>
    <string name="text_headline_onboarding_page1">Mereka Sama Dengan Kita</string>
    <string name="text_body_onboarding_page1">Hanya saja mereka perlu perlakuan \n spesial agar kita bisa berkomunikasi \n dengan mereka</string>
    <string name="text_headline_onboarding_page2">Bagaimana Caranya?</string>
    <string name="text_body_onboarding_page2">Dengan bahasa isyarat kita bisa \n berkomunikasi dengan mereka, SIBI &amp; \n BISINDO</string>
    <string name="text_headline_onboarding_page3">Permudah Komunikasi </string>
    <string name="text_body_onboarding_page3">Difa hadir sebagai aplikasi deteksi gerakan \n tangan bahasa isyarat yang dirancang \n khusus untuk anak-anak agar mereka bisa \n berkomunkasi dengan mereka kaum \n difabel sebayanya</string>
    <string name="text_profile">Profile</string>
    <string name="text_logout">Logout</string>
    <string name="text_kebijakan_privasi">Kebijakan Privasi</string>
    <string name="text_settings">Settings</string>

    <!--Navigation-->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="text_getstarted">Mulai Berkomunikasi Teman Difamu</string>
    <string name="text_btn_get_started">Mulai Berkomunikasi</string>
    <string name="dummy_quotes">“Kalau mau menunggu sampai kita siap, kita akan menghabiskan sisa hidup kita hanya untuk menunggu</string>
    <string name="dummy_creator_quotes">Lemony Snicket.</string>
    <string name="text_quotes">Quotes</string>
    <string name="text_belajar_sibi">Rekomendasi Belajar Sibi</string>
    <string name="text_detail_sibi">Baca Dan Pelajari Supaya Kamu Bisa Menjadi Diri yang lebih baik</string>
    <string name="text_policy_description">Kebijakan privasi ini menjelaskan bagaimana kami \n(Difa dan afiliasi-afiliasi, atau \'kami\') mengumpulkan, menyimpan, mengolah dan melindungi informasi pribadi anda. kebijakan privasi ini berlaku semua yang menggunakan produk aplikasi.\n\nKebijakan aplikasi ini menjelaskan hal-hal sebagai berikut:\n</string>
    <string name="text_point_1">1. Data Pridi yang kami kumpulkan</string>
    <string name="text_point_2">2. Penggunaan Informasi pribadi anda</string>
    <string name="text_point_3">3. penyimpanan infomasi pribadi anda</string>
    <string name="text_point_4">4. perubahan atas kebijakan privasi</string>
    <string name="text_point_5">5. cara untuk menghubungi pihak Difa</string>
    <string name="text_point_1_desc">Informasi pribadi yang kami kumpulkan adalah informasi data diri yang dapat diidentifikasikan atau dapat digunakan untuk mengidentifikasi, menghubungi orang atau perangkat yang terkait dengan informasi tersebut. Informasi pribadi meliputi nama, alamat email, tanggal lahir, tinggi badan, berat badan, dan jenis kelamin. Informasi pribadi yang kami kumpulkan dapat diberikan oleh Anda secara langsung atau oleh pihak ketiga (misalnya: Ketika mendaftar atau menggunakan aplikasi, Ketika menghubungi layanan pelanggan kami, atau sebaliknya ketika anda memberikan informasi pribadi kepada kami). Kami mendapatkan informasi dalam berbagai macam bentuk dan tujuan (yang diizinkan berdasarkan peraturan perundang-undangan yang berlaku).</string>
    <string name="text_point_2_desc">Untuk memberikan jasa kami dan meningkatkan pengalaman Anda dalam menggunakan layanan kami. Informasi pribadi Anda dikumpulkan dengan tujuan sebagai berikut maupun untuk tujuan lain yang diizinkan oleh peraturan perundang-undangan yang berlaku.</string>
    <string name="text_point_3_desc">Informasi pribadi anda hanya akan disimpan selama diperlukan untuk memenuhi tujuan dari pengumpulannya, atau selama penyimpanan tersebut diperlukan atau diperbolehkan oleh peraturan perundang-undangan yang berlaku.</string>
    <string name="text_point_4_desc">Kami mengubah kebijakan privasi ini atas kebijakan kami sendiri dari waktu ke waktu, untuk memastikan bahwa kebijakan privasi ini konsisten dengan perkembangan kami di masa depan, dan/atau perubahan aturan hukum. Jika terjadi perubahan, kami akan memberitahukan perubahan tersebut melalui pemberitahuan umum yang dipublikasikan pada aplikasi, atau ke alamat e-mail yang tercantum pada akun anda. Anda setuju bertanggung jawab dalam meninjau kebijakan privasi ini secara teratur untuk informasi terbaru mengenai pengolahan data dan praktik perlindungan data kami dengan anda menggunakan aplikasi kami setelah adanya perubahan apapun terhadap kebijakan privasi ini dan segala perubahannya.</string>
    <string name="text_point_5_desc">Jika anda memiliki pertanyaan, keluhan, atau saran mengenai kebijakan privasi atau praktik privasi jelajahin, ingin menghubungi pihak perlindungan data kami, anda dapat menghubungi kami di Difa@gmail.com</string>
    <string name="text_setting_app">Settings App</string>
    <string name="text_profile_account">Profile Account</string>
    <string name="text_tentang_aplikasi">Tentang Aplikasi</string>
    <string name="text_about_difa_desc"><![CDATA[Aplikasi DIFA adalah solusi inovatif yang memanfaatkan teknologi kecerdasan buatan (AI) dan pengenalan gambar untuk mengenali serta menerjemahkan Bahasa Isyarat (SIBI). Didesain khusus untuk mereka yang memiliki keterbatasan dalam berbicara, khususnya anak-anak yang ingin berkomunikasi dengan teman mereka yang difabel, aplikasi ini bertujuan memberikan akses lebih luas terhadap komunikasi yang efektif.selain itu juga terdapat qoute dan juga rekomendasi channel youtube untuk belajar bahasa isyarat]]></string>
    <string name="text_about_difa">Apa itu Difa?</string>
    <string name="text_about_app_1">Bagaimana cara kerja Difa</string>
    <string name="text_about_app_2_desc">1. Pada saat pengguna Difa masuk kedalam aplikasi, sistem akan meminta informasi akun yang harus di isi, untuk pendataan user aktif</string>
    <string name="text_about_app_1_desc_2">2. berikutnya dengan menggunakan kamera di hanphone yang diarahkan ke difabel, difa dapat menerjamahkan bahasa isyarat SIBI</string>
    <string name="text_kontak_kami">Kontak Kami</string>
    <string name="text_title_bs_auth_register">Yey, Kamu Berhasil Register</string>
    <string name="text_sub_title_bs_auth_register">Yey kamu berhasil membuat account difa, yu sekarang login</string>
    <string name="text_login">Login</string>

    <string name="text_title_bs_auth_login">Yey, Email Password kamu Valid</string>
    <string name="text_sub_title_bs_auth_login">Yuk Tekan masuk dan mulai komunikasi dengan teman difa mu!</string>

    <string name="text_title_bs_auth_update">Yey, Kamu Berhasil Update Profile kamu</string>
    <string name="text_sub_title_bs_auth_update">Yey Sekarang Account sudah lengkap</string>
    <string name="text_kembali">Kembali</string>
</resources>