<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.kebijakan.KebijakanActivity">

    <LinearLayout
        android:id="@+id/ll_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageButton
            android:id="@+id/iv_back_privacy"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="backbtn"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            style="@style/Text.Body.Large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:text="@string/text_kebijakan_privasi"
            android:textColor="@color/black" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_policy_description"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/text_point_1"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/text_point_2"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/text_point_3"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/text_point_4"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/text_point_5"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_point_1"
                android:textColor="@color/black" />
            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_point_1_desc"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_point_2"
                android:textColor="@color/black" />
            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_point_2_desc"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_point_3"
                android:textColor="@color/black" />
            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_point_3_desc"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_point_4"
                android:textColor="@color/black" />
            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:text="@string/text_point_4_desc"
                android:textColor="@color/black" />

            <TextView
                style="@style/Text.Body.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_point_5"
                android:textColor="@color/black" />
            <TextView
                style="@style/Text.Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/text_point_5_desc"
                android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>