<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Text.Body.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_masuk"
            android:textAlignment="center"
            android:textColor="@color/yellow_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="85dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="180dp" />

    <ImageView
        android:id="@+id/iv_image_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:src="@drawable/ic_difa_login"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/text_email">

        <com.difa.difaapp.customeView.EmailEditCustom
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        app:startIconDrawable="@drawable/ic_lock"
        android:hint="@string/text_passowrdi">

        <com.difa.difaapp.customeView.PasswordEditCustom
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_lupa_pass"
        style="@style/Text.Body.Medium"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        android:textColor="@color/yellow_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_button_yellow"
        android:text="@string/text_masuk"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear_bottom_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dont_have_account"
            style="@style/Text.Body.Medium" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_daftar"
            style="@style/Text.Body.Medium"
            android:layout_marginStart="5dp"
            android:textColor="@color/yellow_500"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        style="@style/Text.Body.Normal"
        app:layout_constraintTop_toBottomOf="@id/linear_bottom_btn"
        app:layout_constraintStart_toStartOf="@id/linear_bottom_btn"
        app:layout_constraintEnd_toEndOf="@id/linear_bottom_btn"
        android:text="@string/text_atau" />

    <View
        android:layout_width="0dp"
        android:layout_height="2.1dp"
        android:background="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"/>

    <View
        android:layout_width="0dp"
        android:layout_height="2.1dp"
        android:background="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_button_red"
        android:text="@string/text_masuk_dengan_google"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_gmail"
        android:paddingStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_or"/>

</androidx.constraintlayout.widget.ConstraintLayout>